--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="home-text">
                             
                             <h1 class="hs-line-1 font-alt mb-80 mb-xs-30 mt-70 mt-sm-0">
-                                Thomas Rhythm
+                               Por que utilizar o HTML 5?
                             </h1>
                             
                             <div class="hs-line-6">
